test/error/iface/err7.rzy
// query is not connected

Sub = Component
  funcA : query():Boolean;
elementary
end

Err7 = Component
composition
  a : Sub;
end

